# es-utils

./: Cargo.toml  README.md
src/: main.rs
test-bench/: README.md  docker-compose.yml  kibana-dashboard.ndjson
test-bench/spring-app/: pom.xml
test-bench/spring-app/src/main/java/dev/ceven/testbench/: SpringAppApplication.java
test-bench/spring-app/src/main/java/dev/ceven/testbench/application/ports/in/: ProcessMessageUseCase.java
test-bench/spring-app/src/main/java/dev/ceven/testbench/application/service/: MessageProcessorService.java
test-bench/spring-app/src/main/java/dev/ceven/testbench/config/: IndexNameProvider.java  KafkaConfig.java
test-bench/spring-app/src/main/java/dev/ceven/testbench/consumer/: MessageConsumerService.java
test-bench/spring-app/src/main/java/dev/ceven/testbench/domain/mapping/: FieldRule.java  Mapper.java
test-bench/spring-app/src/main/java/dev/ceven/testbench/domain/model/: IngestionMetric.java  Message.java
test-bench/spring-app/src/main/java/dev/ceven/testbench/domain/specification/: Specification.java
test-bench/spring-app/src/main/java/dev/ceven/testbench/infrastructure/config/: DomainConfig.java
test-bench/spring-app/src/main/java/dev/ceven/testbench/model/: Message.java
test-bench/spring-app/src/main/java/dev/ceven/testbench/producer/: MessageProducerService.java
test-bench/spring-app/src/main/java/dev/ceven/testbench/repository/: MessageRepository.java
test-bench/spring-app/src/main/resources/: application.yml
(+1 files in other folders)
