[package]
name = "es-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
elasticsearch = { version = "8.19.0-alpha.1", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-patch = "1.2"
url = "2.5.8"
